--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@react-firebase/auth": "^0.2.10",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -14,10 +15,13 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.11",
+    "firebase": "^8.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
